--- a/appveyor.yml
+++ b/appveyor.yml
@@ -39,7 +39,8 @@ before_test:
   - py -m pip install pyautogui
 
 test_script:
-  - py install_vc2015_runtime.py
+  # py install_vc2015_runtime.py
+  - py install_vc2017_runtime.py
   # py run_iric_install.py
 
 artifacts:
