--- a/appveyor.yml
+++ b/appveyor.yml
@@ -54,10 +54,10 @@ before_build:
         # push
         if ($branch) {
           echo "*** before push branch ***"
-          git push --set-upstream origin $env:APPVEYOR_BUILD_VERSION 2>&1 | Out-Null
+          git push --set-upstream origin $env:APPVEYOR_BUILD_VERSION 2>&1
         } else {
           echo "*** before push ***"
-          git push --set-upstream origin $env:APPVEYOR_REPO_BRANCH 2>&1 | Out-Null
+          git push --set-upstream origin $env:APPVEYOR_REPO_BRANCH 2>&1
         }
         if ($LastExitCode -ne 0) { $host.SetShouldExit($LastExitCode) }
       }
