--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,6 +20,13 @@ before_build:
   - ps: |
       $CommitAndPush = $true
       $branch = $true
+
+      if ($branch) {
+        # create branch when remote is not "i-RIC/prepost-gui"
+        git switch -c $env:APPVEYOR_BUILD_VERSION
+        if ($LastExitCode -ne 0) { $host.SetShouldExit($LastExitCode) }
+      }
+
       # Make changes
       Get-Date -Format o | Out-File .\README.md -Encoding utf8 -Append
       ####################################################################################
