--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,8 +22,8 @@ before_build:
       $branch = $true
 
       if ($branch) {
-        # create branch when remote is not "i-RIC/prepost-gui"
-        git switch -c $env:APPVEYOR_BUILD_VERSION
+        # create branch
+        git switch --quiet -c "__$env:APPVEYOR_BUILD_VERSION"
         if ($LastExitCode -ne 0) { $host.SetShouldExit($LastExitCode) }
       }
 
@@ -61,7 +61,7 @@ before_build:
         # push
         if ($branch) {
           echo "*** before push branch ***"
-          git push --set-upstream origin $env:APPVEYOR_BUILD_VERSION 2>&1
+          git push --set-upstream origin "__$env:APPVEYOR_BUILD_VERSION" 2>&1
         } else {
           echo "*** before push ***"
           git push --set-upstream origin $env:APPVEYOR_REPO_BRANCH 2>&1
