--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,6 +16,11 @@ skip_commits:
 image:
   - Visual Studio 2019
 
+init:
+  - ps: |
+      # Sometimes the plaintext of secure variables is displayed so filter out secure vars
+      Get-ChildItem env: | Where-Object { $_.Name -NotMatch "access_token" -and $_.Name -notmatch 'json'}
+
 before_build:
   - ps: |
       $CommitAndPush = $true
@@ -61,10 +66,10 @@ before_build:
         # push
         if ($branch) {
           echo "*** before push branch ***"
-          git push --set-upstream origin "__$env:APPVEYOR_BUILD_VERSION" 2>&1
+          git push --set-upstream origin "__$env:APPVEYOR_BUILD_VERSION" 2>&1 | Out-Null
         } else {
           echo "*** before push ***"
-          git push --set-upstream origin $env:APPVEYOR_REPO_BRANCH 2>&1
+          git push --set-upstream origin $env:APPVEYOR_REPO_BRANCH 2>&1 | Out-Null
         }
         if ($LastExitCode -ne 0) { $host.SetShouldExit($LastExitCode) }
       }
