added echo to end of before_build

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -66,6 +66,7 @@ before_build:
           git push --set-upstream origin $env:APPVEYOR_REPO_BRANCH 2>&1 | Out-Null
         }
         if ($LastExitCode -ne 0) { $host.SetShouldExit($LastExitCode) }
+        echo "Needed to avoid error from git push"
       }
 
 build_script:
